src/test/ch01_3/Block.java
package test.ch01_3;

public class Block {

	public static void main(String[] args) {
		// TODO Auto-generated method stub

//		int v1 = 15;
//		
//		//안에서는 바깔 변수에 접근 가능, 바깔에서는 안의 변수의 접근 불가능.
//		if (v1 > 10) {
//			int v2 = v1 - 10;
//		}
//		int v3 = v1 + v2 + 5;  //error
		
		
//		System.out.println("1" + "2");
//		System.out.println('A' + 'B');
//		System.out.println('1' + 2);
//		System.out.println('1' + '2');
//		System.out.println('J' + "ava");
		
//		byte byteValue = 10;
//		char charValue = 'A';
//		
//		int intValue = byteValue;
//		int intValue1 = charValue;
//		short shortValue = charValue;
//		double doubleValue = byteValue;
		
//		int intValue = 10;
//		char charValue = 'A';
//		
		
		System.out.println("감사합니다");
		System.out.printf("이른: %-6s\n", "감자바"); //문자열  \n换行
		System.out.printf("이른: %s\n", 25);  //정수
		System.out.printf("실수: %10.2f\n", 3.14);  //실수  .2表示出小数点后2位
		System.out.printf("정수출력1: %6d\n", 123);  //정수
		System.out.printf("정수출력1: %d， 실수출력:%f", 123.325);
		
		
	}

}
